replace removeLast() with remove(0)